# NorthstarLauncher

./: .gitignore  .gitmodules  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  R2Northstar.sln  vcpkg.json
NorthstarDLL/: NorthstarDLL.vcxproj  NorthstarDLL.vcxproj.filters  anticheat.cpp  anticheat.h  bansystem.cpp  base64.h  clantag.cpp  dllmain.cpp  dohworker.cpp  hoststate.cpp  ingamechatime.cpp  ingamechatime.h  ingameime.cpp  inputsystem.cpp  inputsystem.h  litehtml.cpp  markdown.cpp  masterserver.cpp  masterserver.h  ns_version.h  pch.h  scriptgamestate.cpp  scriptgamestate.h  scriptjson.cpp  scriptmasterservermessages.cpp  scriptmasterservermessages.h  scriptmatchmakingevents.h  scriptplayerinfo.cpp  scriptserverbrowser.cpp  scriptsvm.cpp  serverauthentication.cpp  serverauthentication.h  squirrel.cpp  vguihooks.cpp  wsahooks.cpp
NorthstarLauncher/: NorthstarLauncher.vcxproj  resources.rc
cmake/: FindZLIB.cmake  Findcurl.cmake  Findimgui.cmake  Findminhook.cmake  Findminizip-ng.cmake  Findnlohmann_json.cmake  Findrapidjson.cmake  Findsilver-bun.cmake  Findspdlog.cmake
imgui/: imconfig.h  imgui.vcxproj  imgui.vcxproj.filters  implot.h  implot_items.cpp  kiero.h
include/: Ultralight.lib  httplib.h  ikcp.h  itimer.h  kcp.lib  libsvm.lib  rs.h  zlibstatic.lib
kcp/: ikcp.c  ikcp.h  itimer.c  kcp.vcxproj  kcp.vcxproj.filters  rs.c  rs.h
loader_wsock32_proxy/: loader_wsock32_proxy.vcxproj
primedev/: CMakeLists.txt  Launcher.cmake  Northstar.cmake  RCa23572  dllmain.cpp  ns_version.h  pch.h  (+3 more)
primedev/wsockproxy/: CMakeLists.txt  loader.cpp
(+155 files in other folders)
